--- a/sketch/index.html
+++ b/sketch/index.html
@@ -6,8 +6,8 @@
 
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <script src="ball.js"></script>
     <script src="numberline.js"></script>
-  
-
+    <script src="sketch.js"></script>
+    
 </body></html>
