--- a/sketch/index.html
+++ b/sketch/index.html
@@ -9,5 +9,5 @@
     <script src="ball.js"></script>
     <script src="numberline.js"></script>
     <script src="sketch.js"></script>
-    
+    <script src="calculator.js"></script>
 </body></html>
