--- a/sketch/index.html
+++ b/sketch/index.html
@@ -6,6 +6,7 @@
 
   </head>
   <body>
+    <script src="text.js"></script>
     <script src="ball.js"></script>
     <script src="numberline.js"></script>
     <script src="sketch.js"></script>
